<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".CalculateTemperature">

    <ImageView
        android:id="@+id/ivThermometer3"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/contentDescriptionThermometerImage"
        app:srcCompat="@drawable/thermometer" />

    <EditText
        android:id="@+id/etNumbOfChirps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/numOfChirps"
        android:inputType="number"
        android:textCursorDrawable="@color/colorAccent" />

    <TextView
        android:id="@+id/tvChooseMetrics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:text="@string/chooseMetricsText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCelsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/celcius"
        app:backgroundTint="@color/colorAccent" />

    <Button
        android:id="@+id/btnFahrenheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/fahrenheit"
        app:backgroundTint="@color/colorAccent" />

    <ImageView
        android:id="@+id/ivCricket3"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contentDescriptionCricketImage"
        app:srcCompat="@drawable/cricket" />

</LinearLayout>