<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivThermometer"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/contentDescriptionThermometerImage"
        app:srcCompat="@drawable/thermometer" />

    <TextView
        android:id="@+id/tvInputDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:text="@string/startText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnEnterChirpNumber"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:text="@string/btnCalculateTemperature"
        app:backgroundTint="@color/colorPrimary" />

    <ImageView
        android:id="@+id/ivCricket"
        android:layout_width="217dp"
        android:layout_height="240dp"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/contentDescriptionCricketImage"
        app:srcCompat="@drawable/cricket2" />

</LinearLayout>